# TreeWidzard-Engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTORS.md  CorePrelude.h  CoreTemplate.cpp  LICENSE  README  README.md  main.cpp  manual.txt  plugins.sh  reminder.txt  temp-code.txt
BitVector/: BitSet.cpp  BitSet.h  BitVector.cpp  BitVector.h  Bitset.cpp  Bitset.h
ConcreteTreeDecomposition/: ctd_lexer.cpp  ctd_lexer.l  ctd_parser.cpp  ctd_parser.hpp  ctd_parser.y  input.ctd
Conjecture/: Conjecture.cpp  Conjecture.h  PropertyAssignment.cpp  PropertyAssignment.h
Controller/: AuxiliaryController.hpp  ErrorController.cpp  ErrorController.h  InputController.cpp  InputController.h  InputController_Old.h  ParseController.cpp  ParseController.h  SearchController.cpp  SearchController.h
DPCores/: CMakeLists.txt
DPCores/Source/: ChromaticNumber_AtMost.cpp  ChromaticNumber_AtMost.h  CliqueNumberSimpleGraphs_AtLeast.cpp  CliqueNumberSimpleGraphs_AtLeast.h  HasMultipleEdges.cpp  HasMultipleEdges.h  MaxDegree_AtLeast.cpp  MaxDegree_AtLeast.h
DynamicCores/: AuxiliaryFunctions.h  ChromaticNumber_AtMost.cpp  ChromaticNumber_AtMost.h  ChromaticNumber_Min.cpp  ChromaticNumber_Min.h  CliqueNumberSimpleGraphs_AtLeast.cpp  CliqueNumberSimpleGraphs_AtLeast.h  CliqueNumberSimpleGraphs_AtLeastTest20210330.cpp  CliqueNumberSimpleGraphs_AtLeastTest20210330.h  CliqueNumber_AtLeast.cpp  CliqueNumber_AtLeast.h  Connectivity.cpp  Connectivity.h  CycleGirth_AtMost.cpp  CycleGirth_AtMost.h  EdgeColoringCompact_AtMost.cpp  EdgeColoring_AtMost-OLD.cpp  EdgeColoring_AtMost-OLD.h  EdgeColoring_AtMost.cpp  EdgeColoring_AtMost.h  EdgeConnected_AtMost.cpp  EdgeConnected_AtMost.h  HamiltonianCycle.cpp  HamiltonianCycle.h  HamiltonianPath.cpp  HamiltonianPath.h  HasCycle.cpp  HasMultipleEdges.cpp  HasMultipleEdges.h  IndependentSet_AtLeast.cpp  IndependentSet_AtLeast.h  MaxDegree_AtLeast.cpp  MaxDegree_AtLeast.h  MinDegree_AtMost.cpp  MinDegree_AtMost.h  Minor.cpp  Minor.h  Mod.cpp  Mod.h  NVertices_AtMost.cpp  (+13 more)
DynamicLibraryLoader/: ct_string.hpp  dynamic_library_loader.hpp
Kernel/: Bag.cpp  Bag.h  ConcreteTreeDecomposition-old.cpp  ConcreteTreeDecomposition-old.h  ConcreteTreeDecomposition.cpp  ConcreteTreeDecomposition.h  Conjecture.cpp  Conjecture.h  Conjecture_old.cpp  CoreWrapper.h  DynamicCore.cpp  DynamicCore.h  DynamicCoreHandler.h  DynamicKernel.cpp  DynamicKernel.h  Flags.cpp  Flags.h  Hasher.hpp  PropertyAssignment.cpp  PropertyAssignment.h  SearchStrategy.cpp  SearchStrategy.h  SearchStrategyHandler.h  State.cpp  State.h  StateTree.cpp  StateTree.h  Width.cpp  Width.h  Witness.cpp  Witness.h  WitnessSet.cpp  WitnessSet.h  WitnessSet.txt  WitnessWrapper.h
LockedSet/: locked_set.hpp
Multigraph/: MultiGraph.cpp  MultiGraph.h
NEW_FOLDER/: LICENSE  README
Optimized_Plugin_Program/: CLUSTERREADME.md  CMakeLists.txt  CorePrelude.h  README  main.cpp
Parser/: README-PARSER.txt  input_lexer.cpp  input_lexer.l  input_parser.cpp  input_parser.hpp  input_parser.y  lexer.cpp  lexer.l  parser.cpp  parser.hpp  parser.y
Scripts/: CMakeLists.txt  buildAllCores.sh  buildAllPlugins.sh  buildAllSearches.sh  format.sh  output  plugins.sh  reminder.txt  test  testPlugins.sh
Search/: LeveledSetSearch.cpp  LeveledSetSearch.h  LeveledSetSearchPremise.cpp  LeveledSetSearchPremise.h  RandomLeveledSetSearch.cpp  RandomLeveledSetSearch.h  RandomLeveledSetSearchPremise.cpp  RandomLeveledSetSearchPremise.h  RelabeledLeveledSetSearch.cpp  breadthFirstSearch.cpp  breadthFirstSearch.h
SearchStrategies/: CMakeLists.txt
Tests/: get_outputs  graph.gr  input.txt  input_Reed.txt  input_girth.txt  k33.txt  multigraph.txt  relabeledgirth.txt  run  term.tr  testEdgeColoring.txt  testMaxDegree.txt  time  treedecomposition.td  twoVertexGraph.gr  twoVertexGraphTreeDec.td  twoVerticesMultigraph.txt  twoVerticesMultigraphDecomposition.txt
Tests_Old/: 4color.txt  AbstractDecomposition.txt  HoffmanGraph.td  PARSE_ABSTRACT_minimumgraph_td-1_ConcreteDecomposition.txt  PARSE_ABSTRACT_minimumgraph_td-1_Graph.txt  PARSE_PACE_minimumgraph_Grotzsch_AbstractDecomposition.txt  PARSE_PACE_minimumgraph_Grotzsch_GMLGraph.gml  PARSE_PACE_minimumgraph_Grotzsch_Graph.txt  PARSE_PACE_minimumgraph_Grotzsch_GraphPaceFormat.gr  PARSE_PACE_minimumgraph_Grotzsch_RunTree.txt  Reed_Conjecture.txt  girth.txt  graph.gr  input.txt  input_cliqueSimple.txt  input_girth.txt  minimumgraph.txt  minimumgraph.txt_RunTree.txt  minimumgraph_BreadthFirstSearch_CounterExample_ConcreteDecomposition.txt  minimumgraph_BreadthFirstSearch_CounterExample_GraphPaceFormat.gr  minimumgraph_BreadthFirstSearch_CounterExample_RunTree.txt  run  testColoring.txt  testMaxDegree.txt  time  triangle.tr  twoVertexGraph.gr
TreeAutomaton/: AbstractTreeDecomposition.cpp  AbstractTreeDecomposition.h  ConcreteTreeDecomposition.cpp  ConcreteTreeDecomposition.h  DecompositionTree.cpp  DecompositionTree.h  InstructiveTreeDecomposition.cpp  InstructiveTreeDecomposition.h  RunTree.cpp  RunTree.h  Term.cpp  Term.h  TreeAutomaton.cpp  TreeAutomaton.h  a.out  main.cpp
draw-graphs/: abstract-graph-drawing.py  adjacency-matrix.py  draw-graphs-gml.py
extract-tables/: .~lock.ch-join.csv#  .~lock.join.csv#  ch-join-table-table.txt  ch-join-table.txt  ch-join.csv  chromatic-join-bfs-pw-1d-table.txt  chromatic-join-bfs-pw-1d.csv  chromatic-join-isobfs-pw-22dec-table.txt  chromatic-join-isobfs-pw-22dec.csv  extract-table-complex.py  extract-table.py  join-table.txt  join.csv  join.txt  reed-conjectureall-statescsv-reed-pw-iso-table.txt  table.txt  test.py
nauty-scripts/: generate-nauty-command.py  graph-iso-bfs.txt  nauty_command.txt
parallel_hashmap/: phmap_base.h
small-tests/: conjecture.txt
test/: PARSE_PACE_conjecture_graph_AbstractDecomposition.txt  PARSE_PACE_conjecture_graph_ConcreteDecomposition.txt  PARSE_PACE_conjecture_graph_Decomposition.td  PARSE_PACE_conjecture_graph_DirectedBipartiteGraphNAUTY.txt  PARSE_PACE_conjecture_graph_GMLGraph.gml  PARSE_PACE_conjecture_graph_Graph.txt  PARSE_PACE_conjecture_graph_GraphPaceFormat.gr  conjecture.txt  graph.gr  (+2 more)
(+458 files in other folders)
